--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=dev ## dev: developpeur et prod: utilisateur
 APP_SECRET=04eb142a1cd7f2fd96a473c1f58df394
 ###< symfony/framework-bundle ###
 
